// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Modal ui with header and footer 1`] = `
<div
  style="position: relative; z-index: 1050; display: block;"
  tabindex="-1"
>
  <div
    class=""
  >
    <div
      aria-modal="true"
      class="modal fade"
      role="dialog"
      style="display: block;"
      tabindex="-1"
    >
      <div
        class="modal-dialog modal-dialog-scrollable"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Header text
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <fieldset
              class="radio-group  mb-3"
            >
              <legend>
                Environment
              </legend>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="local"
                  />
                   
                  local
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="development"
                  />
                   
                  development
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="test"
                  />
                   
                  test
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="acceptation"
                  />
                   
                  acceptation
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="production"
                  />
                   
                  production
                </label>
              </div>
            </fieldset>
          </div>
          <div
            class="modal-footer"
          >
            Footer text
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-backdrop fade"
    />
  </div>
</div>
`;

exports[`Component: Modal ui without footer 1`] = `
<div
  style="position: relative; z-index: 1050; display: block;"
  tabindex="-1"
>
  <div
    class=""
  >
    <div
      aria-modal="true"
      class="modal fade"
      role="dialog"
      style="display: block;"
      tabindex="-1"
    >
      <div
        class="modal-dialog modal-dialog-scrollable"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Header text
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <fieldset
              class="radio-group  mb-3"
            >
              <legend>
                Environment
              </legend>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="local"
                  />
                   
                  local
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="development"
                  />
                   
                  development
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="test"
                  />
                   
                  test
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="acceptation"
                  />
                   
                  acceptation
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="production"
                  />
                   
                  production
                </label>
              </div>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-backdrop fade"
    />
  </div>
</div>
`;

exports[`Component: Modal ui without header 1`] = `
<div
  style="position: relative; z-index: 1050; display: block;"
  tabindex="-1"
>
  <div
    class=""
  >
    <div
      aria-modal="true"
      class="modal fade"
      role="dialog"
      style="display: block;"
      tabindex="-1"
    >
      <div
        class="modal-dialog modal-dialog-scrollable"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-body"
          >
            <fieldset
              class="radio-group  mb-3"
            >
              <legend>
                Environment
              </legend>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="local"
                  />
                   
                  local
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="development"
                  />
                   
                  development
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="test"
                  />
                   
                  test
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="acceptation"
                  />
                   
                  acceptation
                </label>
              </div>
              <div
                class="form-check"
              >
                <label
                  class="form-check-label"
                >
                  <input
                    class="form-check-input"
                    type="radio"
                    value="production"
                  />
                   
                  production
                </label>
              </div>
            </fieldset>
          </div>
          <div
            class="modal-footer"
          >
            Footer text
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-backdrop fade"
    />
  </div>
</div>
`;
